Fix .info_columns not aligning properly and awkward padding on .buttons

--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -114,6 +114,7 @@ header
   +transform (rotate(0))
 
 .button
+  @include box-sizing(border-box)
   display: block
   width: 100%
   max-width: 315px
@@ -274,7 +275,8 @@ html.touch .nav_icon
   margin: 0 auto 20px
 
 .info_column
-  width: 33%
+  @include box-sizing(border-box)
+  width: percentage(1/3)
   padding: 0 2% 0
   float: left
   a
